# Karabo-Pipeline

./: .buildinfo  .dmypy.json  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTORS.md  Container.html  Dockerfile  Installation.html  Installation.md  Installation_no_conda.html  LICENSE  MANIFEST.in  Makefile  README.md  astropy.Dockerfile  bdsf.Dockerfile  codecov.yml  conda_list.txt  config_templ.yaml  container.html  cscs_rascil_dask.py  dask.Dockerfile  dask_mpi.sh  dask_mpi_env_setup.sh  development.html  docker-compose.yaml  docker-start.sh  ducc.Dockerfile  enviornment.yaml  environment-dev-mac.yaml  environment-dev.yaml  environment-test.yaml  environment.yaml  genindex.html  healpy.Dockerfile  hyperbeam.Dockerfile  index.html  (+54 more)
.conda/DLLs/: _ctypes.pyd.conda_trash
.github/workflows/: build-cli-docker-image.yml  build-dev-docker-image.yaml  build-dev-image.yaml  build-dev-image.yml  build-docker-image.yml  build-docs.yaml  build-docs.yml  build-jupyter-docker-image.yml  build-sp5505-with-cache.yml  build-user-docker-image.yml  build-user-image.yml  cache_dev_env.yml  conda-build-test.yml  conda-build.yml  conda-test-build.yml  dev-workflow.yaml  dev-workflow.yml  docker-image.yml  main.yml  nightly-build.yml  purge-dev-image.yaml  purge-image.yml  release.yml  secret-test.yml  test-conda-wheel.yml  test-nightly.yaml  test-nightly.yml  test-on-merge.yml  test-python-version.yml  test-slow-tests.yaml  test-source-detection.yml  test-user-package.yml  test-wsl.yaml  test.yaml  test.yml  test_source_detection.yml  update-citation-cff.yml
.mypy_cache/3.8/: __future__.meta.json  _ast.meta.json  _csv.meta.json  _importlib_modulespec.meta.json  _thread.meta.json  _warnings.meta.json  abc.meta.json  ast.meta.json  atexit.meta.json  builtins.meta.json  codecs.meta.json  copy.meta.json  csv.meta.json  dataclasses.meta.json  datetime.meta.json  enum.meta.json  glob.meta.json  io.meta.json  math.meta.json  mmap.meta.json  platform.meta.json  posix.meta.json  re.meta.json  shutil.meta.json  site.data.json  site.meta.json  socket.meta.json  ssl.meta.json  string.meta.json  subprocess.meta.json  sys.meta.json  threading.meta.json  time.meta.json  types.meta.json  typing.meta.json  typing_extensions.meta.json  uuid.meta.json  warnings.meta.json
_sources/: Container.md.txt  Installation.md.txt  container.md.txt  development.md.txt  index.rst.txt  installation_user.md.txt  karabo.data.rst.txt  karabo.examples.rst.txt  karabo.imaging.rst.txt  karabo.rst.txt  karabo.simulation.rst.txt  karabo.simulation.signal.rst.txt  karabo.sourcedetection.rst.txt  karabo.test.rst.txt  karabo.util.rst.txt  karabo.util.ska_sdp_datamodels.rst.txt  karabo.util.ska_sdp_datamodels.visibility.rst.txt  karabo.workflows.rst.txt  modules.rst.txt  parallel_processing.md.txt
_sources/examples/: Examples.md.txt  examples.md.txt
_sources/main_features/: oskar_imaging.rst.txt  simulation.rst.txt  sourcedetection.rst.txt
_sources/utilities/: utils.rst.txt
_static/: documentation_options.js
conda/: build.sh  conda_build_config.yaml  meta.yaml
doc/: Docker.md  Installation.md  Installation_no_conda.md  doc_packages.txt  environment.yaml  telescope.readme
doc/src/: Container.md  conf.py  container.md  development.md  index.rst  installation_no_conda.md  installation_user.md  karabo.rst  parallel_processing.md
docker/: Dockerfile-CLI  Dockerfile-Dev  Dockerfile-Jupyter  Dockerfile.dev  compose.yaml  docker-compose.yaml  docker-start.sh  kernel.json
docker/dev/: Dockerfile
docker/user/: Dockerfile
docs/: Installation.md  ci-caching-strategy.md  conf.py  index.rst  karabo.Container.rst  karabo.pipeline.rst  karabo.rst
docs/examples/: Examples.md
docs/src/: Container.md  Installation.md  conf.py  karabo.rst  karabo.scripts.rst  modules.rst
examples/: Examples.html  MeerKAT_data_access.ipynb  examples.html  pipeline_example.ipynb
k8s/SRCNet-workflow-AAstar/: README.md  job.yaml
k8s/SRCNet_SKA-MID_AAstar/: README.md  cronjob.yaml  job.yaml  tmp-pvc.yaml
karabo/: __init__.py  _version.py  error.py  karabo_log.txt  karabo_resource.py  resource.py  simulator_backend.py  test.py  testing.py  version.py  warning.py
karabo/.experiments/: MCGLS_exp.ipynb  README.md  plot_source_detection_exp.py  source_detection_exp.py  source_detection_expirement.ipynb
karabo/Container/: __init__.py  container.py  encapsulate.py  environment.py
karabo/Imaging/: Image.py  image.py  imager.py  source_detection.py
karabo/data/: casa.py  external_data.py  obscore.py  src.py
karabo/examples/: Corruptor.py  HIIM_Img_Recovery.ipynb  ImageMosaicker.ipynb  LineEmissionBackendsComparison.ipynb  LineEmissionSimulation_RASCIL.ipynb  MeerKAT_data_access.ipynb  Mosaicking_continuous.ipynb  SRCNet_MWA_beam.ipynb  SRCNet_mwa_visibility_plot.ipynb  SRCNet_rucio_meta.py  SRCNet_rucio_meta_demo.py  SRCNet_simulation_walkthrough.ipynb  SRCNet_v0.1_simulation.py  SRCNet_v0.1_simulation_1_MeerKAT.py  SRCNet_v0.1_simulation_2_AAstar.py  SRCNet_workflow_AAstar.py  Sky_Simulation.ipynb  Sky_Simulation_MWA.ipynb  Sky_Simulation_SDP.ipynb  Sky_Simulation_With_RFI.ipynb  Sky_Simulation_With_RFI_Chris.ipynb  compare_mwa_beams.py  hb_plot.py  how_to_use_karabo_example.ipynb  imaging.ipynb  ipygany_test.ipynb  kk.py  mwa_beam_hyperbeam.py  mwa_obscore_meta.py  mwa_pyuvbeam.py  mwa_waterfall_baseline.py  no_gputimings.csv  observation_planner.py  pipeline_example.ipynb  plot_source_detection_exp.py  sbatch_script.sh  skymodel.py  source_detection.ipynb  source_detection_assessment.ipynb  source_detection_big_files.ipynb  (+10 more)
karabo/imaging/: image.py  imager.py  imager_base.py  imager_factory.py  imager_interface.py  imager_oskar.py  imager_rascil.py  imager_sdp.py  imager_wsclean.py  mosaic.py  source_detection.py  (+1 more)
main_features/: base_imaging.html  imaging.html  oskar_imaging.html  rascil_imaging.html  simulation.html  sourcedetection.html  wsclean_imaging.html
spack-overlay/: repo.yaml
test/: test_container.py  test_simulation.py  test_skymodel.py  test_telescope.py
utilities/: utils.html
(+653 files in other folders)
