[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "mpi: mpi-tests (launch with: 'mpirun -n <n-processes> pytest .')",
]

[project.optional-dependencies]
    dev = [
        'mypy==1.6.1',
        'mypy-extensions==1.0.0',
        'flake8==6.1.0',
        'isort==5.12.0',
        'black[jupyter]==23.10.0',
        'pydocstyle==6.3.0',
        'pytest==7.4.2',
        'pytest-mpi==0.6',
        'pytest-cov==4.1.0',
        'pre-commit==3.5.0',
        'nest_asyncio',  # for notebook test runs
        'types-requests',  # types for mypy
        'myst-parser',
        'sphinx',
        'sphinx_rtd_theme',
        'podmena',  # commit emojis
    ]