
[metadata]
name = Karabo-Pipeline
author = Simon Felix
author_email = simon.felix@fhnw.ch
url = https://github.com/i4Ds/Karabo-Pipeline
description = A data-driven pipeline for Radio Astronomy from i4ds for the SKA Telescope
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platform = any
keywords = {keywords}
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/i4Ds/Karabo-Pipeline/issues

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.9
packages = find:
test_suite = tests
setup_requires =
    setuptools

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[pylint]
python_version = 3.9

[pyright]
reportImplicitStringConcatenation = true
reportMissingParameterType = true
reportUnnecessaryTypeIgnoreComment = true
reportUnknownParameterType = true

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
convention = google
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
add-ignore = D105

[black]
line-length = 88

[isort]
profile = black

[flake8]
max-line-length = 88
doctests = True
ignore = E203, W503
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
# mypy-strict configs
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
# disallow_untyped_calls is not strict currently until all files are mypy compatible, set to true later!
disallow_untyped_calls = false
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
strict_concatenate = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true